test/spec_vectors/simd_i16x8_arith2/fail/module_7.wat
(module (func (result v128) (i16x8.avgr_u (i32.const 0) (f32.const 0.0))))